src/components/UploadCustom/UploadCustom.module.scss
@import "../../scss/variables";

.upload-container {
  max-width: 70%;
  display: flex;
  flex-direction: column;
  align-items: center;

  .progress {
    background-color: lighten($color: $red, $amount: 30%);
    border: 1px solid $light-black;
    border-radius: 10px;
    width: 100%;
    height: 20px;
    margin-bottom: 5px;

    .progress-bar {
      height: 100%;
      background-color: $red;
      border: 1px solid transparent;
      border-radius: 10px;
      color: #fff;
      font-size: 10px;
      font-weight: 500;
      padding: 3px 16px;
      text-align: center;
    }
  }
}

.preview-container {
  position: relative;

  .preview-clear {
    height: 20px;
    width: 20px;
    text-align: center;
    border-radius: 100%;
    background-color: #222222;
    color: #fff;
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
  }
}

